feat: review flow with voice comments, content status, category restructure
Backend:
- Voice recording: audio_url in review_comments, ReviewCommentAudioController, storage
- Migrations V84-V87: categories restructure, content status backfill, audio_url
- Review detail with version content, status in content items
- ReviewCommentResult/ReviewVersionContent for review UI

Frontend:
- Review detail page with inline comments, Text/Voice buttons
- VoiceRecordButton, AuthAudioPlayer (fetch with JWT for playback)
- FieldCommentList: allowDeleteForAll, compact comments
- ContentItemsTable status column, ReviewsTable improvements
- Category/nav updates, BookSwitcher

Made-with: Cursor